--- a/wiki/TableOfContent.wiki
+++ b/wiki/TableOfContent.wiki
@@ -1,4 +1,4 @@
-#This page contains the table of content
+#summary This page contains the table of content
 
  * [Description]
  * [GettingStarted Getting Started]
