Edited wiki page Requirements through web user interface.

--- a/wiki/Requirements.wiki
+++ b/wiki/Requirements.wiki
@@ -1,5 +1,6 @@
 #summary This page contains what is necessary to generate the entities.
 
-= Software requirements =
+== Software requirements ==
 Eclipse IDE 3.6 / 3.7 - http://www.eclipse.org/downloads/ <br/>
-Classtemplater plug-in - Update site: http://github.com/tiborsomodi/classtemplater
+Classtemplater plug-in - Update site: http://github.com/tiborsomodi/classtemplater <br/>
+Maven 2 - http://maven.apache.org/download.html
