--- a/wiki/Description.wiki
+++ b/wiki/Description.wiki
@@ -1,5 +1,10 @@
 <p align="justify">
 Hypertable is a no-sql database system. This project aims to bring a JPA like technology to Hypertable.
-It’s functionality in a nutshell is to create hypertable entities in java (with the Hyperconnector’s annotations), then with some clicks generate the necessary classes, that are handle the entities.
-After these simple steps you can use your entities in a regular way.
+
+Using Hyperconnector is simple, you just need to complete 3 easy steps to use Hypertable
+  # Create your hyperconnector annotated model objects (pojo entities)
+  # Generate the classes needed for all the CRUD operations
+  # Create the data table in Hypertable with the generated script
+
+You are ready to go!
 </p>
