--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -14,7 +14,7 @@ Now you should add the following lines to your <i>pom.xml</i>:
 	<repository>
 		<id>inepex</id>
 		<name>inepex</name>
-		<url>http://maven.inepex.com:8081/nexus/content/repositories/releases/</url>
+		<url>http://maven.inepex.com/content/repositories/thirdparty/</url>
 	</repository>
 </repositories>
 
