--- a/wiki/TableOfContent.wiki
+++ b/wiki/TableOfContent.wiki
@@ -4,3 +4,4 @@
   * [Requirements]
   * [GettingStarted Getting Started]
   * [http://hyperconnector.googlecode.com/svn/hyperconnector/trunk/doc/index.html javadoc]
+  * [HyperDumpRestoreApp]
